--- a/ewa-rl-env/notebooks/analysis.ipynb
+++ b/ewa-rl-env/notebooks/analysis.ipynb
@@ -1,16 +1,216 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports // Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline\n",
+    "\n",
+    "sns.set(style='whitegrid')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Training and Eval Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_results = pd.read_csv('../results/training_results.csv')\n",
+    "evaluation_results = pd.read_csv('../results/evaluation_results.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analyze Training Performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Total Rewards per Episode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_episode_rewards = training_results.groupby('episode')['total_rewards'].max().reset_index()\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.lineplot(data=training_episode_rewards, x='episode', y='total_rewards', marker='o')\n",
+    "plt.title('Total Rewards per Episode during Training')\n",
+    "plt.xlabel('Episode')\n",
+    "plt.ylabel('Total Rewards')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Action Distribution During Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 6))\n",
+    "sns.countplot(data=training_results, x='action')\n",
+    "plt.title('Action Distribution during Training')\n",
+    "plt.xlabel('Action')\n",
+    "plt.ylabel('Count')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analyze Evaluation Performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Total Rewards over Steps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.lineplot(data=evaluation_results, x='step', y='total_rewards')\n",
+    "plt.title('Total Rewards over Steps during Evaluation')\n",
+    "plt.xlabel('Step')\n",
+    "plt.ylabel('Total Rewards')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Action Distribution During Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.lineplot(data=evaluation_results, x='step', y='total_rewards')\n",
+    "plt.title('Total Rewards over Steps during Evaluation')\n",
+    "plt.xlabel('Step')\n",
+    "plt.ylabel('Total Rewards')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compare Training and Evaluation Performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Total Rewards Comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 6))\n",
+    "sns.lineplot(data=training_results, x='step', y='total_rewards', label='Training')\n",
+    "sns.lineplot(data=evaluation_results, x='step', y='total_rewards', label='Evaluation')\n",
+    "plt.title('Total Rewards Comparison')\n",
+    "plt.xlabel('Step')\n",
+    "plt.ylabel('Total Rewards')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Action Performance Comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(1, 2, figsize=(18, 6))\n",
+    "\n",
+    "sns.countplot(data=training_results, x='action', ax=axes[0])\n",
+    "axes[0].set_title('Action Distribution during Training')\n",
+    "axes[0].set_xlabel('Action')\n",
+    "axes[0].set_ylabel('Count')\n",
+    "axes[0].tick_params(axis='x', rotation=45)\n",
+    "\n",
+    "sns.countplot(data=evaluation_results, x='action', ax=axes[1])\n",
+    "axes[1].set_title('Action Distribution during Evaluation')\n",
+    "axes[1].set_xlabel('Action')\n",
+    "axes[1].set_ylabel('Count')\n",
+    "axes[1].tick_params(axis='x', rotation=45)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
